# my_nonebot2

./: .env.dev  .env.dev.bak  .env.dev_temp2  .env.prod  .gitignore  .zshrc  CLAUDE.md  IFLOW.md  PortAdd.sh  PortDeleted.sh  README.md  \  bot.py  chat_db.sqlite3  chat_gemini_history.db  chat_history.db  config.yml  demo.py  device.json  font.sh  gocp.ini  gocp.log.1  init.sh  inverted_index.json  kill.sh  monitor.py  nb.sh  nb2.sh  nonebot2.ini  pyproject.toml  rebot.sh  record.json  run.sh  test.py
data/: setu_config.json
data/notebook/: config.yaml
gocp/: config.hjson  config.hjson_dev  config.yml  device.json  go.sh  gocp.sh  password.encrypt  session.token
gocp/logs/: 2021-08-05.log.1  2021-08-05.log.2  2021-08-05.log.3  2021-08-05.log.4  2021-08-05.log.5  2021-08-13.log.1  2021-08-13.log.2  2021-08-15.log.1  2021-08-19.log.1  2021-08-19.log.2  2021-08-23.log.1  2021-09-05.log.1  2021-09-09.log.1  2021-09-11.log.1  2021-09-11.log.2  2021-09-11.log.3  2021-09-11.log.4
gocq/: gocq.sh
nb2/: .env.dev  .env.prod  .gitignore  README.md  bot.py  bot.sh  font.sh  init.sh  pyproject.toml
plugins/auto_message/: __init__.py  config.py
plugins/bazaardb/: __init__.py  bazaar_user_scraper.py  bazaardb_scraper.py
plugins/bilibili_live/: __init__.py  config.py
plugins/bilibili_video/: __init__.py  config.py
plugins/chat_gpt/: __init__.py
plugins/chat_gpt4/: __init__.py
plugins/chat_gpt_piao/: __init__.py
plugins/command/: __init__.py
plugins/deepseek_gpt/: __init__.py
plugins/gemini_gpt/: __init__.py  config.py
plugins/jd_test/: __init__.py
(+127 files in other folders)
