[tool.poetry]
name = "nb2"
version = "0.1.0"
description = "nb2"
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7.3"
nonebot2 = "^2.0.0.a1"

[tool.poetry.dev-dependencies]
nb-cli = "^0.5.0"
nonebot-plugin-test = "^0.3.0"

[tool.nonebot]
plugins = []
plugin_dirs = ["nb/plugins"]
adapters = [
    { name = "QQ 频道", module_name = "nonebot.adapters.qqguild" }
]

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

